# Agentic-Doctor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: main.py
src/agents/: crew_agents.py
src/chat_system/: chat_interface.py
src/tasks/: crew_tasks.py
src/tools/: data_tools.py  output_tools.py
